Agregue fotos a secciones de biblioteca y agregue carrouseles a biblioteca

--- a/biblioteca.html
+++ b/biblioteca.html
@@ -236,9 +236,6 @@
                             <a href="libros.html#libro10"><img width="250px" src="img/libros/libro10.jpeg" alt="Guerras climáticas"></a>
                         </div>
                         <div class="libro-carrousel">
-                            <a href="libros.html#libro12"><img width="250px" src="img/libros/libro12.jpeg" alt="Pueblos indígenas en la Argentina"></a>
-                        </div>
-                        <div class="libro-carrousel">
                             <a href="libros.html#libro13"><img width="250px" src="img/libros/libro13.jpeg" alt="Mala leche"></a>
                         </div>
                         <div class="libro-carrousel">
@@ -262,6 +259,12 @@
                 <button role="button" id="flecha-izquierda-consumo" class="flecha-izquierda"><img src="img/left-arrow.png" alt="Flecha izquierda"></button>
                 <div class="contenedor-carrousel-consumo">
                     <div class="carrousel">
+                        <div class="consumo-carrousel">
+                            <a href="#"><img width="250px" src="img/peliculas/peli1.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="consumo-carrousel">
+                            <a href="#"><img width="250px" src="img/peliculas/peli4.jpg" alt="Okja"></a>
+                        </div>
                         <div class="consumo-carrousel">
                             <a href="#"><img width="250px" src="img/documentales/documental1.jpg" alt="Minimalism"></a>
                         </div>
@@ -291,7 +294,7 @@
                 <button role="button" id="flecha-derecha-consumo" class="flecha-derecha"><img src="img/right-arrow.png" alt="Flecha derecha"></button>
             </div>
         </div>
-        <div id="alimentacion" class="container consumo-destacados">
+        <div id="alimentacion" class="container alimentacion-destacados">
             <div class="contenedor-titulos-controles">
                 <div class="titulo">
                     <h3>Alimentación</h3>
@@ -302,6 +305,12 @@
                 <button role="button" id="flecha-izquierda-alimentacion" class="flecha-izquierda"><img src="img/left-arrow.png" alt="Flecha izquierda"></button>
                 <div class="contenedor-carrousel-alimentacion">
                     <div class="carrousel">
+                        <div class="alimentacion-carrousel">
+                            <a href="#"><img width="250px" src="img/documentales/documental14.jpg" alt="Mala leche"></a>
+                        </div>
+                        <div class="alimentacion-carrousel">
+                            <a href="#"><img width="250px" src="img/documentales/documental15.jpg" alt="Mala leche"></a>
+                        </div>
                         <div class="alimentacion-carrousel">
                             <a href="#"><img width="250px" src="img/libros/libro13.jpeg" alt="Mala leche"></a>
                         </div>
@@ -321,14 +330,82 @@
                             <a href="#"><img width="250px" src="img/peliculas/peli14.jpg" alt="Más que miel"></a>
                         </div>
                         <div class="alimentacion-carrousel">
-                            <a href="#"><img width="250px" src="img/peliculas/peli15.jpg" alt="¿Qué es la soberanía alimentaria?"></a>
-                        </div>
-                        <div class="alimentacion-carrousel">
                             <a href="#"><img width="250px" src="img/peliculas/peli16.jpg" alt="Tenedores contra cuchillos"></a>
                         </div>
                     </div>
                 </div>
                 <button role="button" id="flecha-derecha-alimentacion" class="flecha-derecha"><img src="img/right-arrow.png" alt="Flecha derecha"></button>
+            </div>
+        </div>
+        <div id="corrupcion" class="container corrupcion-destacados">
+            <div class="contenedor-titulos-controles">
+                <div class="titulo">
+                    <h3>Corrupción ambiental y tráfico de especies</h3>
+                </div>
+                <div class="indicadores-corrupcion"></div>
+            </div>
+            <div class="contenedor-principal">
+                <button role="button" id="flecha-izquierda-corrupcion" class="flecha-izquierda"><img src="img/left-arrow.png" alt="Flecha izquierda"></button>
+                <div class="contenedor-carrousel-corrupcion">
+                    <div class="carrousel">
+                        <div class="corrupcion-carrousel">
+                            <a href="#"><img width="250px" src="img/peliculas/peli5.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="corrupcion-carrousel">
+                            <a href="#"><img width="250px" src="img/peliculas/peli6.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="corrupcion-carrousel">
+                            <a href="#"><img width="250px" src="img/peliculas/peli7.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="corrupcion-carrousel">
+                            <a href="#"><img width="250px" src="img/peliculas/peli8.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="corrupcion-carrousel">
+                            <a href="#"><img width="250px" src="img/documentales/documental5.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="corrupcion-carrousel">
+                            <a href="#"><img width="250px" src="img/documentales/documental6.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="corrupcion-carrousel">
+                            <a href="#"><img width="250px" src="img/documentales/documental7.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                    </div>
+                </div>
+                <button role="button" id="flecha-derecha-corrupcion" class="flecha-derecha"><img src="img/right-arrow.png" alt="Flecha derecha"></button>
+            </div>
+        </div>
+        <div id="residuos" class="container residuos-destacados">
+            <div class="contenedor-titulos-controles">
+                <div class="titulo">
+                    <h3>Residuos</h3>
+                </div>
+                <div class="indicadores-residuos"></div>
+            </div>
+            <div class="contenedor-principal">
+                <button role="button" id="flecha-izquierda-residuos" class="flecha-izquierda"><img src="img/left-arrow.png" alt="Flecha izquierda"></button>
+                <div class="contenedor-carrousel-residuos">
+                    <div class="carrousel">
+                        <div class="residuos-carrousel">
+                            <a href="#"><img width="250px" src="img/documentales/documental17.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="residuos-carrousel">
+                            <a href="#"><img width="250px" src="img/documentales/documental18.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="residuos-carrousel">
+                            <a href="#"><img width="250px" src="img/peliculas/peli17.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="residuos-carrousel">
+                            <a href="#"><img width="250px" src="img/peliculas/peli18.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="residuos-carrousel">
+                            <a href="#"><img width="250px" src="img/peliculas/peli19.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                        <div class="residuos-carrousel">
+                            <a href="#"><img width="250px" src="img/peliculas/peli20.jpg" alt="Sociedad de consumo"></a>
+                        </div>
+                    </div>
+                </div>
+                <button role="button" id="flecha-derecha-residuos" class="flecha-derecha"><img src="img/right-arrow.png" alt="Flecha derecha"></button>
             </div>
         </div>
     </div>
