--- a/biblioteca.html
+++ b/biblioteca.html
@@ -70,16 +70,18 @@
     <main class="biblioteca">
         <div class="container wow animate__animated animate__slideInRight">
             <h1>Biblioteca</h1>
-            <p>Desde Consciente Colectivo creemos que compartir e intercambiar información es un proceso necesario para generar una mayor visibilidad, y en consecuencia una movilización más dinámica, por las problemáticas socioambientales. Es por eso que decidimos crear una biblioteca de contenidos participativa: Enviamos tu recomendación de contenido (película, libro, documental) para ayudarnos a mantener este espacio siempre al día, y generar así una red de intercambio colectiva que nos enriquezca a  todxs.</p>
+            <p>Desde Consciente Colectivo creemos que compartir e intercambiar saberes y conocimiento es un proceso necesario para generar mayor profundidad en el abordaje de las problemáticas socioambientales. Aprender sobre estos temas es una herramienta vital para que cada vez logremos mayor visibilidad e involucramiento. Por eso decidimos crear una biblioteca de contenidos participativa. ¿De qué se trata? Compartimos recomendaciones de libros, documentales, charlas y películas entre otros materiales. ¿Cómo podés participar? Envíanos tus recomendaciones así las sumamos y logramos entre todxs hacer que este espacio sea diverso, plural y enriquecedor en su contenido. Te invitamos a ser parte de esta red de intercambio, porque lo socioambiental, es colectivo.</p>
         </div>
     </main>
     <div class="container">
         <section class="toggle">
-            <h6>Ordenar por</h6>
+            <h6>Ordenar por:</h6>
+            <p>Tipo</p>
             <div>
                 <img id="toggle-derecha" src="img/toggle-derecha.png" alt="Toggle derecha">
                 <img id="toggle-izquierda" src="img/toggle-izq.png" alt="Toggle izquierda">
             </div>
+            <p>Tema</p>
         </section>
     </div>
     <div id="seccion1">
