--- a/busquedas-laborales.html
+++ b/busquedas-laborales.html
@@ -74,25 +74,26 @@
                 <h2>voluntarias</h2>
             </div>
             <div class="item2 wow animate__animated animate__slideInUp">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quam iure adipisci voluptate sequi nulla illum accusantium, harum ex itaque architecto fugit quos fuga cumque impedit. Eveniet libero voluptatibus recusandae ab odio culpa similique assumenda, quae sunt dignissimos reprehenderit, quidem hic quasi porro cum placeat. A vero ullam soluta debitis!</p>
+                <p>Si tenés ganas de sumarte al equipo de Consciente Colectivo esta es tu oportunidad. Estamos buscando personas dedicadas y comprometidas con las problemáticas socioambientales para las diferentes áreas de nuestro espacio.</p>
+                <p>En caso de que estés interesadx en alguna de nuestras búsquedas o tengas alguna duda sobre algún puesto, envianos un mail a <strong class="busquedas">somosconscientecolectivo@gmail.com</strong> con tu información y experiencia.</p>
             </div>
         </div>
     </main> 
     <div class="container" id="busquedas-laborales">
         <ul class="trabajo">
-            <li class="accion menu trabajo-territorial"><a class="busqueda" href="#trabajo-territorial">Trabajo territorial</a></li>
-            <li class="accion menu logistica"><a class="busqueda" href="#logistica">Logística y planificación territorial</a></li>
-            <li class="desarrollo menu recaudador-fondos"><a class="busqueda" href="#recaudador-fondos">Recaudador de fondos</a></li>
+            <li class="accion menu trabajo-territorial"><a class="busqueda" href="#trabajo-territorial">Trabajo barrial</a></li>
+            <li class="accion menu logistica"><a class="busqueda" href="#logistica">Logística y planificación barrial</a></li>
+            <li class="desarrollo menu recaudador-fondos"><a class="busqueda" href="#recaudador-fondos">Recaudadorx de fondos</a></li>
             <li class="comunicacion menu community-manager"><a class="busqueda" href="#community-manager">Community manager</a></li>
             <li class="comunicacion menu editor-audiovisual"><a class="busqueda" href="#editor-audiovisual">Editorx audiovisual</a></li>
-            <li class="comunicacion menu diseniador-grafico"><a class="busqueda" href="#diseniador-grafico">Diseñador gráfico</a></li>
+            <li class="comunicacion menu diseniador-grafico"><a class="busqueda" href="#diseniador-grafico">Diseñadorx gráfico</a></li>
             <li class="comunicacion menu asistente-twitter"><a class="busqueda" href="#asistente-twitter">Asistente de manejo de Twitter</a></li>
-            <li class="politica menu investigador-politico"><a class="busqueda" href="#investigador-politico">Investigador/a políticx</a></li>
+            <li class="politica menu investigador-politico"><a class="busqueda" href="#investigador-politico">Investigadorx político</a></li>
         </ul>
 
         <article id="trabajo-territorial">
             <h3>Acción</h3>
-            <h4>Trabajo territorial</h4>
+            <h4>Trabajo barrial</h4>
             <p>Buscamos a personas comprometidas y responsables para colaborar con el trabajo territorial en el área de Acción de Consciente Colectivo.</p>
             <h5>Perfil:</h5>
             <ul>
@@ -133,7 +134,7 @@
         </article>
         <article id="logistica">
             <h3>Acción</h3>
-            <h4>Logística y planificación territorial</h4>
+            <h4>Logística y planificación barrial</h4>
             <p>Buscamos a personas comprometidas y responsables para colaborar con el trabajo de logística y planificación territorial en el área de Acción de Consciente Colectivo.</p>
             <h5>Perfil:</h5>
             <ul>
@@ -174,7 +175,7 @@
         </article>
         <article id="recaudador-fondos">
             <h3>Desarrollo Institucional</h3>
-            <h4>Recaudador de fondos</h4>
+            <h4>Recaudadorx de fondos</h4>
             <p>Buscamos a personas comprometidas y responsables para colaborar con el trabajo de Recaudación de Fondos en el área de Desarrollo Institucional de Consciente Colectivo.</p>
             <h5>Perfil:</h5>
             <ul>
@@ -218,7 +219,7 @@
             <h5>Perfil:</h5>
             <ul>
                 <li>Estudiantes o profesionales de las áreas de Comunicación Social, Diseño, Marketing, Periodismo y similares.</li>
-                <li>Excelente redacción y ortografía/</li>
+                <li>Excelente redacción y ortografía.</li>
                 <li>Creatividad y proactividad.</li>
                 <li>Capacidad para la planificación de las tareas de su área y autonomía.</li>
                 <li>Compromiso en el tiempo dedicado al voluntariado.</li>
@@ -244,7 +245,6 @@
             <ul>
                 <li>El compromiso individual con las causas sociales y ambientales.</li>
                 <li>Proactividad y ganas de trabajar en equipo.</li>
-                <li>Conocimientos en diseño web con plataforma Wix (no excluyente).</li>
                 <li>Manejo de herramientas de medición de social media (no excluyente).</li>
             </ul>
             <p class="semidestacado">Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
@@ -287,7 +287,7 @@
         </article>
         <article id="diseniador-grafico">
             <h3>Comunicación</h3>
-            <h4>Diseñador Gráfico</h4>
+            <h4>Diseñadorx Gráfico</h4>
             <p>Convocamos a personas con fuerte compromiso social y ambiental para colaborar como Diseñadorx Gráfico en el área de Comunicación Consciente Colectivo.</p>
             <h5>Perfil:</h5>
             <ul>
@@ -306,7 +306,7 @@
             <h5>Modalidad de trabajo:</h5>
             <ul>
                 <li>A distancia, con reuniones quincenales para organizar el trabajo que se hará y el progreso que se haya llevado a cabo.</li>
-                <li>Carga horaria aproximada de 8 horas semanales con horarios flexibles dependiendo.</li>
+                <li>Carga horaria aproximada de 8 horas semanales con horarios flexibles.</li>
             </ul>
             <h5>Ofrecemos:</h5>
             <ul>
@@ -362,7 +362,7 @@
         </article>
         <article id="investigador-politico">
             <h3>Política</h3>
-            <h4>Investigador/a políticx</h4>
+            <h4>Investigadorx político</h4>
             <p>Convocamos a personas con fuerte compromiso social y ambiental para colaborar como Investigador políticx de para el área de Política de Consciente Colectivo.</p>
             <h5>Perfil:</h5>
             <ul>
