--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-interval="5000">
-                    <img src="img/13.jpg" class="d-block w-100" alt="Ley humedales">
+                    <img src="img/13.jpg" class="d-block w-100" alt="Protesta">
                 </div>
                 <div class="carousel-item" data-interval="5000">
-                    <img src="img/6.jpg" class="d-block w-100" alt="Acción barrial">
+                    <img src="img/6.jpg" class="d-block w-100" alt="Ley humedales">
                 </div>
                 <div class="carousel-item" data-interval="5000">
-                    <img src="img/2.jpg" class="d-block w-100" alt="Rechazo venta Costanera">
+                    <img src="img/2.jpg" class="d-block w-100" alt="Etiquetado">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
@@ -100,11 +100,11 @@
             <h3 class="frase">JUSTICIA SOCIAL</h3>
         </section>
     </div>
-        <section class="iframe">
-            <div class="embed-responsive embed-responsive-16by9 container"> 
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CBvMb2qWsrA" title="YouTube video player" frameborder="0" allow="accelerometer;autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </section>
+    <section class="iframe">
+        <div class="embed-responsive embed-responsive-16by9 container"> 
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CBvMb2qWsrA" title="YouTube video player" frameborder="0" allow="accelerometer;autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </section>
     <div class="container">
         <section>
             <h2>Proyectos actuales</h2>
