--- a/peliculas.html
+++ b/peliculas.html
@@ -287,8 +287,8 @@
                             <p>Es de fotógrafxs que tratan ciertas temáticas, entre las cuales se encuentran el trabajo infantil, la preservación de la diversidad marina y variados    ecosistemas, entre otros. Está en Netflix.</p>
                         </div>
                     </div>
-                    <div class="sin-foto"> <!-- id="peli30" class="peli30" -->
-                        <div> <!-- class="info-peli30" -->
+                    <div id="peli30" class="peli30"> 
+                        <div class="info-peli30">  
                             <h4>Our planet (Nuestro planeta)</h4>
                             <p>Documental excepcional que muestra la biodiversidad del Planeta Tierra en todas sus formas. Realiza un llamado a quien lo vea para ser parte de la solución  mientras aún tenemos tiempo.</p>
                         </div>
