--- a/proyectos.html
+++ b/proyectos.html
@@ -73,8 +73,8 @@
                 <h2>Proyectos</h2>
                 <h2>actuales</h2>
             </div>
-            <div class="item2 wow animate__animated animate__slideInDown">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quam iure adipisci voluptate sequi nulla illum accusantium, harum ex itaque architecto fugit quos fuga cumque impedit. Eveniet libero voluptatibus recusandae ab odio culpa similique assumenda, quae sunt dignissimos reprehenderit, quidem hic quasi porro cum placeat. A vero ullam soluta debitis!</p>
+            <div class="item2 item2-proyectos wow animate__animated animate__slideInDown">
+                <p>Desde Consciente Colectivo entendemos que hay tantos proyectos para abordar como organizaciones que los trabajan. Es por eso que elegimos ponernos al hombro algunos proyectos para trabajarlos de lleno, y acompañar y reconocer el trabajo que vienen haciendo otras organizaciones en otros proyectos.</p>
             </div>
         </div>
     </main> 
@@ -85,7 +85,9 @@
                 <img src="img/down-arrow.png" alt="Flecha">
             </div>
             <div class="informacion-proyectos" id="informacion-etiquetado">
-                <div class="img"><img class="proyectos" src="https://via.placeholder.com/1000x425" alt="Manifestación"></div>
+                <div class="embed-responsive embed-responsive-16by9 container"> 
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/a6MsnIaobaA" title="YouTube video player"frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
+                </div>
                 <p>Utilizamos diversas estrategias para que el proyecto de <strong>Promoción de la Alimentación Saludable</strong> sea ley:</p>
                 <ol>
                     <li><strong>Trabajamos en coalición</strong> con diferentes organizaciones como Fundeps, FIC, Consumidores Argentinos, Museo del Hambre, FAGRAN, Sanar nutrición. Logramos llegar a  audiencias más amplias en las redes sociales y en el contacto con nuestros representantes.</li>
