--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -74,13 +74,13 @@
                 <div class="img-quienes-somos"><img class="img-quienes" src="img/1.jpg" alt="Congreso"></div>
                 <div class="item-derecha wow animate__animated animate__fadeInTopRight">
                     <h3>¿Por qué nace Consciente Colectivo?</h3>
-                    <p>Porque estamos convencidxs de que para generar acciones y medidas reales, urgentes, y necesarias, debemos asumir que la construcción es colectiva. Por eso,  nos propusimos formar un espacio abierto que funcione de manera colaborativa con otras organizaciones, para complementarnos y compartir recursos, logrando así   una mayor visibilización de estas problemáticas.</p>
+                    <p>Consciente colectivo surge en un marco de crisis global, durante una pandemia que nos dejó muy en claro que los cambios que se necesitan son urgentes. Junto a un grupo de jóvenes, co-creamos este espacio de activismo y militancia socio-ambiental con el objetivo de incidir en la consciencia colectiva y en las decisiones políticas. Estamos convencidxs que para generar transformaciones reales y concretas, el trabajo debe ser siempre colectivo.</p>
                 </div>
             </section>
             <section class="quienes-somos">
                 <div class="item-izquierda wow animate__animated animate__fadeInLeft">
                     <h3>¿Por qué socioambiental?</h3>
-                    <p>Porque creemos indudablemente que para abordar las diversas problemáticas ambientales, debemos primero comprender el contexto social en el cual se   desarrollan. Hoy habitamos un país con un 50% de pobreza entre su población. Lo socioambiental tiene que ver con lo económico, lo político, y lo cultural: sólo   atravesando estos aspectos de manera transversal, podremos tener una visión más amplia del contexto local, regional y global que hoy nos envuelve.</p>
+                    <p>Porque creemos indudablemente que para abordar las diversas problemáticas ambientales, debemos comprender el contexto social en el cual se desarrollan. Remarcamos la importancia de buscar soluciones sistémicas, que arranquen el problema de raíz. Lo socio-ambiental tiene que ver con lo económico, lo político, y lo cultural: sólo atravesando estos aspectos de manera transversal, podremos tener una visión profunda del contexto local, regional y global que hoy nos envuelve.</p>
                 </div>
                 <div class="img-quienes-somos"><img class="img-quienes" src="img/8B.jpg" alt="Huerta"></div>
             </section>
@@ -88,13 +88,13 @@
                 <div class="img-quienes-somos"><img class="img-quienes" src="img/5.jpg" alt="Manifestación"></div>
                 <div class="item-derecha wow animate__animated animate__fadeInRight">
                     <h3>¿Qué queremos?</h3>
-                    <p>Que la crisis social, climática y ambiental, sea considerada una prioridad, comprendiendo que afecta a la población en conjunto, y debe ser tratada en   carácter de urgencia. Si bien buscamos responder, desde el activismo, a la mayor suma de problemáticas posibles, adjudicando la importancia que corresponde a     cada una, nuestro foco atraviesa principalmente, la salud, el ambiente, y la materia social. </p>
+                    <p>Que la crisis social, climática y ambiental, sea considerada una prioridad. Es imperativo comprender que estas cuestiones son urgentes y nos afectan a todxs. Nuestro foco atraviesa principalmente, la salud, el ambiente, y la materia social. Venimos a seguir con el legado de quienes hace siglos trabajan por un mejor presente y un futuro sostenible.</p>
                 </div>
             </section>
             <section class="quienes-somos">
                 <div class="item-izquierda wow animate__animated animate__fadeInBottomLeft">
-                    <h3>¿Cómo nos organizamos internamente?</h3>
-                    <p>Existen cinco áreas de trabajo dentro de Consciente Colectivo: Educación, Acción, Desarrollo Institucional, Incidencia política,  y Comunicación. La división    de áreas nace, naturalmente, con el fin de poder afrontar de manera localizada las diversas facetas de las problemáticas que abarcamos, tomando el compromiso y    responsabilidad que cada una de ellas requiere. </p>
+                    <h3>¿Cómo nos organizamos?</h3>
+                    <p>Existen cinco áreas de trabajo dentro de Consciente Colectivo: Educación, Acción, Incidencia política, Desarrollo institucional, y Comunicación. Esta división nace, naturalmente, con el fin de poder afrontar de manera localizada los distintos aspectos de las problemáticas que tratamos. Por otro lado, buscamos formar un espacio abierto que funcione de manera colaborativa con otras organizaciones, para complementarnos y lograr así un alcance mayor.</p>
                 </div>
                 <div class="img-quienes-somos"><img class="img-quienes" src="img/3.jpg" alt="Trabajo Social"></div>
             </section>
@@ -174,6 +174,5 @@
     <script>
         new WOW().init();
     </script>
-        
 </body>
 </html>
