--- a/involucrate.html
+++ b/involucrate.html
@@ -66,26 +66,30 @@
             </div>
         </nav>      
     </header>
-    <main>
+    <main id="involucrate">
         <div class="container">
             <h1 class="titulo-involucrate">Involucrate</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In ipsum assumenda earum fugiat mollitia quaerat possimus sint. Doloribus facere distinctio deserunt in nam facilis optio, magnam iste. Architecto, fuga voluptatibus!
-            Corrupti nam incidunt dolorum culpa iure architecto illum accusamus explicabo quasi exercitationem deleniti iste modi, debitis officiis accusantium ullam ducimus quisquam delectus commodi mollitia rerum ab hic? Veritatis, tempore amet.</p>
+            <div class="encabezado-involucrate">
+                <div class="embed-responsive embed-responsive-16by9 container"> 
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/AEkM3kd-nj4" title="YouTube video player" frameborder="0"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <p>Nos tocó vivir en un momento que nos obliga a tomar decisiones. Tenemos que dejar de pensar que las problemáticas socioambientales son   algo del futuro. Están sucediendo acá y ahora ¡Es momento de activar! El cambio es posible, pero solo se puede lograr con la ayuda de     personas como vos, que se toman las injusticias de manera personal y deciden involucrarse exigiendo un mejor presente y un futuro   sostenible. Por eso desde Consciente Colectivo te invitamos a sumarte y hacer una diferencia.</p>
+            </div>
         </div>
     </main>
     <div class="involucrate">
         <article id="dona">
             <div class="container">
                 <h3>Doná</h3>
-                <h3>ahora!</h3>
-                <p>Cada dia seguimos trabajando para mejorar nuestro planeta, ayudanos! Cualquier monto hace la diferencia!</p>
+                <h3>ahora</h3>
+                <p>¡Sumate con una pequeña donación! Tu colaboración hace que todos los días podamos seguir trabajando por una sociedad más justa.</p>
                 <a class="dona" href="https://cafecito.app/conscientecolectivo">Hacé click acá</a>
             </div>
         </article>
         <article id="sumate">
             <div class="container">
-                <h3>Sumate al equipo!</h3>
-                <p>Acompañanos siendo parte de esta transformación! Dona tu tiempo y ayudanos a seguir luchando por un mejor planeta para todos</p>
+                <h3>Sumate al equipo</h3>
+                <p>¡Sé parte de esta transformación! Activa con nosotrxs y acompañanos en la lucha por un planeta mejor.</p>
                 <a class="sumate" href="https://docs.google.com/forms/d/e/1FAIpQLSdD_skT48_5wrUdjlV8LCl1KbKK6ziLSnZ03rjwKFSCovAynw/viewform">Hacé click acá</a>
             </div>
         </article>
