cambie foto que queremos y accion barrial

--- a/proyectos.html
+++ b/proyectos.html
@@ -127,7 +127,7 @@
                 <img src="img/down-arrow.png" alt="Flecha">
             </div>
             <div class="informacion-proyectos" id="informacion-accion">
-                <div class="img"><img class="proyectos" src="https://via.placeholder.com/1000x425" alt="Huerta"></div>
+                <div class="img"><img class="proyectos" src="img/9.jpg" alt="Huerta urbana"></div>
                 <p>Estamos convencidxs que el <strong>trabajo territorial</strong> es fundamental para <strong>generar</strong> verdaderas <strong>trasformaciones</strong>. Es por eso que <strong>militamos la Soberanía Alimentaria en los barrios</strong>. En conjunto con lxs vecinxs de Fuerte Apache y Barrio Evita, construimos 5 huertas en distintos espacios del barrio donde antes habían canteros, basurales o tierras ociosas, para que puedan cosechar alimentos sanos y seguros, y utilizarse en los comedores para las ollas populares. <strong>Aprendemos en conjunto</strong> a plantar, cuidar y cosechar la huerta.</p>
             </div>
         </div>    
